k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jquery-deployment
  namespace: jquery
spec:
  selector:
    matchLabels:
      app: jquery
  replicas: 1
  template:
    metadata:
      labels:
        app: jquery
    spec:
      containers:
      - name: jquery
        image: 795118656430.dkr.ecr.us-east-2.amazonaws.com/jquery-eks:latest
        ports:
        - containerPort: 80
