k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-jquery-static
  namespace: jquery
spec:
  selector:
    app: jquery
  type: LoadBalancer
  ports:
    protocol: TCP
    port: 80
    targetPort: 80
